--- a/src/main/resources/static/signup-customer.html
+++ b/src/main/resources/static/signup-customer.html
@@ -4,56 +4,49 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Khaopiyo Ji - Signup</title>
-  <link rel="stylesheet" href="signup-customer.css" >
-  <!-- Link to Font Awesome for the camera icon -->
+  <link rel="stylesheet" href="signup-customer.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-  <!-- Header Section at the top of the page -->
   <header>
     <h1>Khaopiyoji</h1>
   </header>
 
-  <!-- Main Container for Left and Right Sections -->
   <div class="main-container">
-    <!-- Left Section with Quote -->
     <div class="quote-container">
       <h2>"Discover the best food vendors near you and subscribe to our monthly tiffin service!"</h2>
       <p>Our app connects you with nearby food vendors for tasty and affordable meals, delivered straight to your doorstep. Never worry about your meals again!</p>
     </div>
 
-    <!-- Right Section with Form -->
     <div class="container">
-      <!-- Signup Form Section -->
       <div class="signup-form">
-        <!-- Profile Picture Circle -->
         <div class="profile-picture">
-          <input type="file" id="imageFile" accept="image/*">
+          <input type="file" id="imageFile" name="imageFile" accept="image/*">
           <label for="imageFile">
-            <i class="fas fa-camera"></i> <!-- Camera icon inside the circle -->
+            <i class="fas fa-camera"></i>
           </label>
         </div>
         
         <form id="signupForm" enctype="multipart/form-data">
           <div class="form-group">
-            <label for="customerusername">customerusername</label>
-            <input type="text" id="customerusername" placeholder="Enter your username">
+            <label for="customerusername">Username</label>
+            <input type="text" id="customerusername" name="customerusername" placeholder="Enter your username" required>
           </div>
           <div class="form-group">
-            <label for="name">customername</label>
-            <input type="text" id="customername" placeholder="Enter your full name">
+            <label for="customername">Full Name</label>
+            <input type="text" id="customername" name="customername" placeholder="Enter your full name" required>
           </div>
           <div class="form-group">
-            <label for="email">email</label>
-            <input type="email" id="email" placeholder="Enter your email">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Enter your email" required>
           </div>
           <div class="form-group">
-            <label for="password">password</label>
-            <input type="password" id="password" placeholder="Enter your password">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" placeholder="Enter your password" required>
           </div>
           <div class="form-group">
-            <label for="address">address</label>
-            <textarea id="address" placeholder="Enter your address"></textarea>
+            <label for="address">Address</label>
+            <textarea id="address" name="address" placeholder="Enter your address" required></textarea>
           </div>
           <button type="submit" class="signup-btn">Sign Up</button>
         </form>
